--- a/src/assets/style/blocks/_commonPageWrapper.scss
+++ b/src/assets/style/blocks/_commonPageWrapper.scss
@@ -1,5 +1,6 @@
-.dappPageWrapper, .dappModalWindowWrapper, .indexLayout .routerContainer .dappPageWrapper {
-
+.dappPageWrapper,
+.dappModalWindowWrapper,
+.indexLayout .routerContainer .dappPageWrapper {
   & > * {
     margin: 1rem 0;
   }
@@ -15,7 +16,6 @@
     border-radius: $borderRadius;
     box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
     transition: background-color $transition1;
-
 
     &.accountBlock {
       min-height: 0;
@@ -49,7 +49,8 @@
           padding-right: 30px;
 
           .returnBtn {
-            i, .ov-icon {
+            i,
+            .ov-icon {
               width: 25px;
               height: 25px;
               font-size: 16px;
@@ -73,7 +74,8 @@
         display: block;
         text-decoration: none;
 
-        i, .ov-icon {
+        i,
+        .ov-icon {
           width: 40px;
           height: 40px;
           margin-left: 0;
@@ -99,7 +101,6 @@
     border: 1px solid;
     border-radius: $borderRadiusMd;
   }
-
 
   ._icon-wrapped {
     display: inline-flex;
@@ -134,7 +135,9 @@
 }
 
 .genericListContainer {
-  &.balancesList, &.transactionsListContainer, &.contactsListContainer {
+  &.balancesList,
+  &.transactionsListContainer,
+  &.contactsListContainer {
     width: 100%;
     //height: calc(100% - 170px);
     overflow-x: hidden;
@@ -161,7 +164,6 @@
     }
   }
 
-
   .nothingFound {
     display: flex;
     flex-direction: column;
@@ -178,28 +180,26 @@
 .dappPageWrapper {
   padding: 1rem 0 0;
 }
-@media (max-width: $mobile) {
 
+@media (max-width: $mobile) {
   section.layout-content.layoutContent {
     display: flex;
     overflow: hidden;
     padding: 0;
     margin: 0;
+
     .routerContainer {
       display: flex;
       flex-direction: column;
       margin: 0;
       padding: 0;
+
       .dappPageWrapper {
         padding: 1rem 0;
         overflow-x: hidden;
       }
     }
   }
-
-
-
-
 
   ._icon-wrapped {
     &.rounded {
@@ -217,18 +217,17 @@
         &.-secondary {
           padding: 0.3rem 0 !important;
           font-size: 16px !important;
-
-
         }
       }
 
       &.-link {
         margin: 0.2rem !important;
       }
-
     }
 
-
+    &.-circle {
+      display: inline-flex !important;
+    }
   }
 
   .form-input-group {
@@ -239,11 +238,13 @@
 
   .dappPageWrapper {
     .tileBlock {
-      padding: .75rem 1rem 1rem !important;
+      padding: 0.75rem 1rem 1rem !important;
       //min-height: 40vh;
       width: 90vw;
 
-      .balancesList, .transactionsListContainer, .contactsListContainer {
+      .balancesList,
+      .transactionsListContainer,
+      .contactsListContainer {
         //background-color: #f7fafc;
         margin: 0.25rem 0 !important;
 
@@ -307,12 +308,11 @@
         padding-top: 0 !important;
         padding-bottom: 0.5rem !important;
 
-        em, i {
-
+        em,
+        i {
           height: min-content;
           width: min-content;
           line-height: 100%;
-
         }
       }
     }
@@ -329,7 +329,6 @@
       }
     }
   }
-
 }
 
 //@media (min-width: $mobile+1) and () {
@@ -337,10 +336,11 @@
 //}
 //
 
-
 .inkline.-dark {
   .dappPageWrapper {
-    .balancesList, .transactionsListContainer, .contactsListContainer {
+    .balancesList,
+    .transactionsListContainer,
+    .contactsListContainer {
       //background-color: $bgSecondary;
     }
   }
@@ -348,7 +348,9 @@
 
 .inkline.-light {
   .dappPageWrapper {
-    .balancesList, .transactionsListContainer, .contactsListContainer {
+    .balancesList,
+    .transactionsListContainer,
+    .contactsListContainer {
       //background-color: #f7fafc;
     }
   }
