feat(UI/UX): UX improvement for the NFTs * NFT-balances moved to a separate screen * Added direct menu link and dedicated icon for the NFTs * buttons w/t operation under the NFT was combined into the group * Address of recipient added to the History record of MintNFT operation * address field now is shown in one line on the mobile * question mark aligned * some refactoring done

--- a/src/assets/style/components/_walletAddress.scss
+++ b/src/assets/style/components/_walletAddress.scss
@@ -77,6 +77,16 @@
   }
 }
 
+@media screen and (max-width: $mobile) {
+  .walletValue {
+    white-space: nowrap;
+    font-size: 10px !important;
+    letter-spacing: -0.04rem;
+    width: 100%;
+    overflow: hidden;
+  }
+}
+
 body.inkline.-light .defaultLayout {
   .walletContainer {
     background-color: #0000000a;
