--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -14,6 +14,15 @@
   color: $red;
 }
 
+.goBackContinueBtns {
+  display: grid;
+  width: 100%;
+  height: max-content;
+  grid-template-columns: max-content 1fr;
+  grid-template-rows: 100%;
+  grid-gap: 0.8rem;
+}
+
 main.layout.defaultLayout {
   max-height: 100%;
   overflow: hidden;
