--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -375,6 +375,9 @@ button.-lg.-circle {
     }
 
     svg {
+      display: block;
+      width: 20px;
+      height: 20px;
       margin-right: 10px;
     }
 
