--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -136,12 +136,15 @@
     color: $white !important;
     background-color: $violet;
     border-color: $violet !important;
-    border-radius: 4px;
+    border-radius: 0.2rem !important;
+    font-size: 0.8rem;
+    padding: 0.4rem 0.8rem;
     transition: $transition1;
+    transition-property: background-color, border-color;
 
     &:hover {
       background-color: $lightViolet !important;
-      border-color: $lightViolet;
+      border-color: $lightViolet !important;
     }
   }
 
