Hide network badge on loggin in loader

--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -38,6 +38,10 @@
       position: absolute;
       bottom: 100%;
       left: 100%;
+
+      @media screen and (max-width: $mobile) {
+        display: none;
+      }
     }
   }
 
