chore(build): Pre-release of new onboarding, logic, UI/UX improvements:
 — closed ZKF-947 (dropping zkNft.xyz)
 - UI: Dropdown fixes
 - closes ZKF-946: implemented 2 providers (Wallet Connect v.1.4.0 & bnc-onboard v.1.34.1
 - Logic: synced all processes during the onboard (sync & async accordingly)
 - Updated onboard config;
 — added Web3.js as a universal wrapper (supporting bigger number of the providers);
 — Packages update:
   - updated implementation that effects as a closed #ZKF-946 task
   - ```blockie``` was replaced with new and typed ```blockies-ts```
   - `@walletconnect/*` switch with v.1.4.0;
   - `ethers` switched with v.5.0.32;
 — UX/UI: deposit screen improved;
 - UI: viewport was changed to non-scalable on mobile;
 — more wallets were added:
   - Gnosis Safe;
   - Gnosis Safe Multisig;
   - xDefi;
   - BitPie;
   - Binance;
   - Coinbase;
   - ... and others;

--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -349,13 +349,11 @@ body {
       }
 
       .dropdown {
-        height: 52px;
+        min-height: 52px;
+        height: fit-content;
+        max-height: 312px;
         overflow: hidden;
         transition: height $transition1;
-
-        &.opened {
-          height: 312px;
-        }
       }
     }
   }
