--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -11,11 +11,11 @@
       }
     }
   }
-  
+
   footer a {
     color: $purple;
     transition: color $transition2;
-    
+
     &:hover {
       color: $lightViolet;
     }
@@ -47,12 +47,12 @@
     }
 
     .tile {
-      width: 130px;
-      height: 130px;
+      width: 100px;
+      height: 100px;
       margin: 20px auto 5px;
       padding: 20px;
       background-color: $white;
-      border-radius: 27px;
+      border-radius: 25px;
       box-shadow: $tileShadow;
       transition: $transition1;
 
@@ -91,7 +91,8 @@
 
     &.-dark {
       .iconsBlock a {
-        i, .ov-icon {
+        i,
+        .ov-icon {
           color: $darkViolet;
         }
       }
@@ -99,7 +100,8 @@
 
     &.-light {
       .iconsBlock a {
-        i, .ov-icon {
+        i,
+        .ov-icon {
           color: $white;
         }
       }
@@ -142,7 +144,8 @@
           background-color: $violet;
           border-radius: 50%;
 
-          i, .ov-icon {
+          i,
+          .ov-icon {
             display: block;
             width: 100%;
             height: 100%;
