chore(onboard): updated implementation that effects as a closed #ZKF-946 task

--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -27,8 +27,7 @@
       min-width: 40%;
       max-width: 100%;
 
-      .tileContainer
-      {
+      .tileContainer {
         margin-left: 1rem;
         margin-right: 1rem;
       }
