--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,73 +1,46 @@
 // Core
-
-@import "./components/custom/input.scss";
-
-@import "./components/custom/button.scss";
-
-@import "./components/custom/alert.scss";
-
+@import "./vars/variables";
+@import "./vars/custom";
+@import "./vars/transitions";
 @import "./default";
 
 //Layouts
 @import "./layouts/default";
-
 @import "./layouts/index";
 
 //Blocks
 @import "./blocks/header";
-
 @import "./blocks/indexHeader";
-
 @import "./blocks/footer";
-
 @import "./blocks/socialBlock";
-
 @import "./blocks/logo";
-
 @import "./blocks/onboard";
-
 @import "./blocks/mint";
-
 @import "./blocks/loggingInLoader";
-
 @import "./blocks/chooseToken";
 
 //Components
+@import "./components/custom/input";
+@import "./components/custom/button";
+@import "./components/custom/alert";
 @import "./components/loader";
-
 @import "./components/userImg";
-
 @import "./components/walletAddress";
-
 @import "./components/checkmark";
-
 @import "./components/toaster";
-
 @import "./components/loadingBlock";
-
 @import "./components/amountInput";
-
 @import "./components/successBlock";
-
 @import "./components/note";
-
 @import "./components/singleTransaction";
 
 //Pages
 @import "./pages/index";
-
 @import "./pages/contacts";
-
 @import "./pages/transactions";
-
 @import "./pages/transaction";
-
 @import "./pages/account";
-
 @import "./pages/tokenAccount";
-
 @import "./dev";
-
 @import "./mobile-layout";
-
 @import "./blocks/commonPageWrapper";
