--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -9,6 +9,7 @@ header {
     position: fixed;
     top: 0;
     z-index: 3;
+
     @media screen and (max-width: $mobile) {
       position: fixed;
       top: 0;
@@ -16,6 +17,7 @@ header {
       z-index: 9;
       box-shadow: $shadowBottom;
     }
+
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(239, 241, 244);
@@ -26,9 +28,7 @@ header {
     min-height: 60px;
   }
 
-
   &.loggedInHeader {
-
     @media screen and (min-width: $tablet) and (max-width: $desktop) {
       .pagesContainer.linksContainer {
         grid-gap: 3px;
@@ -99,11 +99,11 @@ header {
         }
       }
 
-
       .zkwallet-logo {
         width: auto !important;
         height: 100% !important;
         object-fit: contain;
+
         @media (max-width: $mobile) {
           height: 25px !important;
         }
@@ -158,7 +158,8 @@ header {
       text-decoration: none;
       transition: color $transition1;
 
-      em, i {
+      em,
+      i {
         padding-left: 2px;
         color: $gray;
         font-size: 12px;
@@ -196,6 +197,7 @@ header {
       background-color: $darkViolet;
       box-shadow: $shadowTop;
     }
+
     .pagesContainer {
       position: fixed;
       bottom: -1px;
@@ -223,6 +225,7 @@ header {
           display: block;
           margin: 0 auto;
         }
+
         span {
           margin-top: 2px;
         }
@@ -362,7 +365,6 @@ body.inkline.-light header {
 
   .pagesContainer,
   .mobileFooter {
-
     @media screen and (max-width: $mobile) {
       background-color: $white;
     }
