--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -29,11 +29,13 @@
       border-bottom: 1px solid;
       transition: $transition1;
       transition-property: background-color, border-color;
+
       &:last-child {
         border-bottom: none;
       }
 
-      .amount, .tokenSymbol {
+      .amount,
+      .tokenSymbol {
         display: inline-flex;
       }
 
@@ -104,21 +106,23 @@
             white-space: nowrap;
             text-overflow: ellipsis;
           }
+
           .copyContentHash {
             display: flex;
             align-items: center;
             color: $gray;
             cursor: pointer;
             transition: color $transition1;
+
             &:active {
               transition-duration: 0.0001s;
               color: $green !important;
             }
-            
+
             .iconContainer {
               display: flex;
               align-items: center;
-              
+
               svg {
                 position: relative;
                 top: -0.5px;
@@ -127,13 +131,13 @@
                 overflow: visible;
                 margin-right: 4px;
               }
+
               span {
                 font-size: 12px;
               }
             }
           }
         }
-
 
         .tokenSymbol {
           font-size: $tempFontSizeMedium;
@@ -163,6 +167,7 @@
 
           svg {
             margin-left: 5px;
+
             &.modalOpenIcon {
               position: relative;
               top: 2px;
@@ -248,7 +253,7 @@
           .tooltip-wrapper {
             height: 100%;
             width: 100%;
-            
+
             svg {
               display: block;
               width: 100%;
@@ -277,10 +282,10 @@
             white-space: normal
           }
 
-          .amount, .tokenSymbol {
+          .amount,
+          .tokenSymbol {
             font-size: 12px !important;
             font-family: $firaCode;
-
           }
 
           .tokenSymbol {
@@ -315,7 +320,8 @@
             font-size: 14px;
           }
 
-          .actionType, .actionType > span {
+          .actionType,
+          .actionType > span {
             text-align: left !important;
             white-space: nowrap;
             font-size: 10px !important;
