--- a/src/assets/style/blocks/_socialBlock.scss
+++ b/src/assets/style/blocks/_socialBlock.scss
@@ -19,7 +19,8 @@
       color: $lightViolet !important;
     }
 
-    em, i {
+    em,
+    i {
       font-size: 18px;
       line-height: 20px;
     }
