--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -19,7 +19,8 @@ body.inkline.-light .defaultLayout {
     background: $white;
 
     .tileHeadline .returnBtn {
-      i, .ov-icon {
+      i,
+      .ov-icon {
         color: $black;
       }
     }
@@ -36,7 +37,8 @@ body.inkline.-dark .defaultLayout {
     background: $darkViolet;
 
     .tileHeadline .returnBtn {
-      i, .ov-icon {
+      i,
+      .ov-icon {
         color: $white;
       }
     }
@@ -72,8 +74,7 @@ input.form-input.-prefixed:focus {
 }
 
 .iconInfo {
-  margin: 2px 0;
-  margin-left: 10px;
+  margin: 2px 0 2px 10px;
   font-size: 11px;
   line-height: 28px;
   text-align: center;
@@ -87,6 +88,7 @@ input.form-input.-prefixed:focus {
   height: 28px;
   width: 28px;
   display: inline-block;
+
   @media (max-width: $mobile) {
     height: 24px;
     width: 24px;
@@ -111,12 +113,7 @@ input.form-input.-prefixed:focus {
   .defaultLayout {
     justify-content: stretch;
     align-items: stretch;
+    height: stretch;
     max-height: 100vh;
-
-    /* The hack for Safari */
-    @supports (-webkit-touch-callout: none) {
-      //noinspection CssInvalidPropertyValue
-      max-height: -webkit-fill-available;
-    }
   }
 }
