--- a/src/assets/style/_mobile-layout.scss
+++ b/src/assets/style/_mobile-layout.scss
@@ -62,12 +62,9 @@
     main {
       padding: 60px 0 95px;
       min-height: 100vh;
-      //height: 0 !important;
 
-      /* autoprefixer: off */
       @supports (-webkit-touch-callout: none) {
-        //noinspection CssInvalidPropertyValue
-        min-height: -webkit-fill-available;
+        min-height: stretch;
       }
     }
   }
