--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -40,17 +40,14 @@
     font-family: $firaSans;
 
     @media (max-width: $mobile) {
-      height: 100vh !important;
+      height: fit-content !important;
       //height: calc(100vh - 1rem) !important;
       max-height: 100vh !important;
       border-radius: 0 !important;
 
-      /* autoprefixer: off */
       @supports (-webkit-touch-callout: none) {
-        //noinspection CssInvalidPropertyValue
-        max-height: fill-available;
-        //noinspection CssInvalidPropertyValue
-        height: fill-available;
+        max-height: stretch;
+        height: stretch;
       }
 
       //flex-flow: column;
@@ -94,6 +91,7 @@
 
   ul.bn-onboard-modal-select-wallets {
     max-height: 50vh !important;
+    overflow-y: auto;
   }
 
   .bn-onboard-custom.bn-onboard-select-wallet-definition {
@@ -291,19 +289,15 @@ aside.bn-onboard-custom.bn-onboard-modal {
   max-height: 100vh;
   padding: 2vh 2vw;
 
-  /* Avoid Chrome to see Safari hack */
   @supports (-webkit-touch-callout: none) {
-    //noinspection CssInvalidPropertyValue
-    max-height: fill-available;
+    max-height: stretch;
   }
 
   .bn-onboard-custom.bn-onboard-modal-content {
     max-height: 90vh !important;
 
-    /* Avoid Chrome to see Safari hack */
     @supports (-webkit-touch-callout: none) {
-      //noinspection CssInvalidPropertyValue
-      min-height: fill-available;
+      min-height: stretch;
     }
   }
 
