--- a/src/assets/style/blocks/_chooseToken.scss
+++ b/src/assets/style/blocks/_chooseToken.scss
@@ -91,6 +91,11 @@
 
       .tokenSymbol {
         font-size: 22px;
+
+        .iconInfo {
+          margin-left: 0;
+          pointer-events: none;
+        }
       }
 
       .rightSide {
