--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -24,7 +24,7 @@
     width: max-content;
     padding-top: 0 !important;
 
-    .zkwallet-logo {
+    .zkwallet-logo, .projectLogo {
       height: 55px;
 
       @media screen and (max-width: $mobile) {
