Capture onboard events, theme mode and polishing

--- a/src/assets/style/pages/_tokenAccount.scss
+++ b/src/assets/style/pages/_tokenAccount.scss
@@ -65,7 +65,7 @@
       font-size: 20px;
       display: flex;
       height: 100%;
-      align-items: flex-end;
+      align-items: center;
 
       .balancePrice {
         color: $gray;
