--- a/src/assets/style/blocks/_chooseToken.scss
+++ b/src/assets/style/blocks/_chooseToken.scss
@@ -79,20 +79,33 @@
       &:last-child {
         border-bottom: none;
       }
+      &.disabled {
+        cursor: default;
+
+        .tokenSymbol > span, .rightSide {
+          opacity: 0.5;
+        }
+      }
 
       @media screen and (max-width: $mobile) {
         height: 74px !important;
         padding: 7px 20px !important;
       }
 
-      &:hover {
+      &:not(.disabled):hover {
         background-color: transparentize($color: $gray, $amount: 0.9);
       }
 
       .tokenSymbol {
         font-size: 22px;
 
+        & > span {
+          transition: opacity $transition1;
+          will-change: opacity;
+        }
         .iconInfo {
+          position: relative;
+          top: 2px;
           margin-left: 0;
         }
       }
@@ -101,6 +114,8 @@
         display: flex;
         flex-direction: column;
         text-align: right;
+        transition: opacity $transition1;
+        will-change: opacity;
 
         .balance {
           font-size: $tempFontSizeMedium;
