Switch network, Refactor fee available token, and other small fixes

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -18,6 +18,7 @@
 @import "./blocks/mint";
 @import "./blocks/loggingInLoader";
 @import "./blocks/chooseToken";
+@import "./blocks/networkSwitch";
 
 //Components
 @import "./components/custom/input";
