--- a/src/assets/style/pages/_tokenAccount.scss
+++ b/src/assets/style/pages/_tokenAccount.scss
@@ -62,7 +62,8 @@
     }
 
     .balance {
-      font-size: 20px;
+      font-size: 1.1rem;
+      line-height: 1.25rem;
       display: flex;
       height: 100%;
       align-items: center;
@@ -71,12 +72,18 @@
         color: $gray;
         font-size: 16px;
       }
+
+      .secondaryText {
+        font-size: 0.9rem;
+      }
     }
   }
+
   .tokenNotFound {
     font-size: 22px;
     text-align: center;
   }
+
   .transactionsTile {
     min-height: 250px !important;
   }
