--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -96,6 +96,7 @@
 
   ul.bn-onboard-modal-select-wallets {
     max-height: 50vh !important;
+    overflow: auto;
   }
 
   .bn-onboard-custom.bn-onboard-select-wallet-definition {
