fix(dApp): CI hotfix, SEO-title change & scss minor improvement | ZKF-1079, ZKF-1088  * SEO-title changed to drop ETH environment mention  * fixed major issue with the testnets CI  * tiny scss refactoring  * building optimized with webpack  * module purgecss added
Closes ZKF-1079
Closes ZKF-1088

--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -72,8 +72,7 @@ input.form-input.-prefixed:focus {
 }
 
 .iconInfo {
-  margin: 2px 0;
-  margin-left: 10px;
+  margin: 2px 0 2px 10px;
   font-size: 11px;
   line-height: 28px;
   text-align: center;
