Fix loggin in loader bade #ZKF-1097

--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -36,6 +36,9 @@
       position: absolute;
       bottom: 100%;
       left: 100%;
+      @media screen and (max-width: 390px) {
+        left: 80%;
+      }
     }
   }
 
