--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -26,6 +26,7 @@
 
     .zkwallet-logo, .projectLogo {
       height: 55px;
+      width: max-content;
 
       @media screen and (max-width: $mobile) {
         height: 35px;
