chore(package): Global reconfiguration  * `cspell` dictionary updated  * CHANGELOG.md and `*.scss` files linted and fixed  * husky configured  * yarn upgraded to 3.*  * yarn typescript plugin installed  * Sentry mixin renamed (miss-spelling fixed)  * `oh-vue-icons` reinstalled with the composition-api  * packages rebuild  * eslint / ts / nuxt / yarn / stylelint / babel reconfigured

--- a/src/assets/style/_dev.scss
+++ b/src/assets/style/_dev.scss
@@ -1,10 +1,10 @@
 .alert > .content {
   width: 200px;
-  white-space: normal;
+  white-space: normal
 }
 
 .button-with-icon {
   flex-flow: row !important;
   align-items: center !important;
-  display: inline-flex !important;
+  display: inline-flex !important
 }
