--- a/src/assets/style/components/_checkmark.scss
+++ b/src/assets/style/components/_checkmark.scss
@@ -4,8 +4,9 @@
   height: max-content;
   margin: 0 auto;
   text-align: center;
+
   svg {
     width: 150px !important;
-    height: 150px !important;
+    height: 150px !important
   }
 }
