--- a/src/assets/style/components/_toaster.scss
+++ b/src/assets/style/components/_toaster.scss
@@ -9,7 +9,7 @@
         background-color: #fd413c !important;
 
         a {
-          color: $white;
+          color: $white
         }
       }
     }
@@ -24,7 +24,7 @@ body.inkline.-light .toasted-container {
       background-color: $white !important;
 
       a {
-        color: $gray;
+        color: $gray
       }
     }
   }
@@ -37,7 +37,7 @@ body.inkline.-dark .toasted-container {
       background-color: $violet !important;
 
       a {
-        color: $gray;
+        color: $gray
       }
     }
   }
