--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -7,7 +7,7 @@
     align-items: stretch;
 
     .form-input-group {
-      margin-bottom: 1rem;
+      margin-bottom: 1rem
     }
 
     .centerBlock {
@@ -19,7 +19,7 @@
       height: auto;
       padding-top: 30px;
       overflow: hidden;
-      text-align: center;
+      text-align: center
     }
 
     .balances {
@@ -38,22 +38,22 @@
         box-shadow: $shadowInset;
 
         &.nftList {
-          max-height: 35vh;
+          max-height: 35vh
         }
 
         &::-webkit-scrollbar {
           width: 10px;
-          background-color: $tempTransparent;
+          background-color: $tempTransparent
         }
 
         &::-webkit-scrollbar-thumb {
           border-radius: $borderRadius;
-          cursor: pointer;
+          cursor: pointer
         }
 
         &::-webkit-scrollbar-track {
           background-color: $tempTransparent;
-          border-radius: $borderRadius;
+          border-radius: $borderRadius
         }
 
         .balanceItem {
@@ -70,15 +70,15 @@
           transition-property: background-color, color;
 
           &:last-child {
-            border-bottom: none;
+            border-bottom: none
           }
 
           &:hover {
-            background-color: transparentize($color: $gray, $amount: 0.9);
+            background-color: transparentize($color: $gray, $amount: 0.9)
           }
 
           .tokenSymbol {
-            font-size: 20px;
+            font-size: 20px
           }
 
           .status {
@@ -89,28 +89,28 @@
             text-align: center;
 
             .verified {
-              color: $green;
+              color: $green
             }
 
             .committed {
-              color: #aa935d;
+              color: #aa935d
             }
 
             .inProgress {
-              color: $gray;
+              color: $gray
             }
 
             svg {
               position: relative;
               display: block;
-              top: 1.5px;
+              top: 1.5px
             }
 
             .loaderContainer {
               position: relative;
               left: 1px;
               margin-top: 1px;
-              margin-left: 2px;
+              margin-left: 2px
             }
           }
 
@@ -122,7 +122,7 @@
 
             .rowItem {
               display: flex;
-              align-items: center;
+              align-items: center
             }
 
             .total {
@@ -132,7 +132,7 @@
 
               .balancePrice {
                 color: $gray;
-                font-size: 16px;
+                font-size: 16px
               }
 
               &.small {
@@ -140,7 +140,7 @@
                 font-size: 13px;
 
                 .balancePrice {
-                  font-size: 12px;
+                  font-size: 12px
                 }
               }
             }
@@ -165,7 +165,7 @@
           .tokenSymbol {
             text-align: center;
             font-size: 16px;
-            letter-spacing: -0.03rem;
+            letter-spacing: -0.03rem
           }
 
           .rightSide {
@@ -176,7 +176,7 @@
             .status {
               width: 1.5rem;
               height: 1.5rem;
-              order: -1;
+              order: -1
             }
 
             .rowItem {
@@ -186,7 +186,7 @@
               align-items: center;
 
               &:nth-child(2) {
-                margin-top: 10px;
+                margin-top: 10px
               }
             }
 
@@ -205,11 +205,11 @@
               font-family: $firaCode;
 
               .balancePrice {
-                order: 1;
+                order: 1
               }
 
               .tokenPrice {
-                font-size: 11px;
+                font-size: 11px
               }
             }
           }
@@ -223,12 +223,12 @@ body.inkline {
   &.-light {
     .walletPage .balancesList {
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-light;
+        background-color: $input-border-color-focus-light
       }
 
       .balanceItem {
         color: $black;
-        border-color: $input-border-color-light;
+        border-color: $input-border-color-light
       }
     }
   }
@@ -236,12 +236,12 @@ body.inkline {
   &.-dark {
     .walletPage .balancesList {
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-dark;
+        background-color: $input-border-color-focus-dark
       }
 
       .balanceItem {
         color: $white;
-        border-color: $input-border-color-dark;
+        border-color: $input-border-color-dark
       }
     }
   }
@@ -250,5 +250,5 @@ body.inkline {
 #questionMark {
   height: 30px;
   width: 30px;
-  margin: -5px 0 0;
+  margin: -5px 0 0
 }
