--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -9,7 +9,7 @@
 
     @media screen and (max-width: $mobile) {
       margin-bottom: 0;
-      margin-top: 0;
+      margin-top: 0
     }
   }
 
@@ -29,16 +29,18 @@
       border-bottom: 1px solid;
       transition: $transition1;
       transition-property: background-color, border-color;
+
       &:last-child {
-        border-bottom: none;
+        border-bottom: none
       }
 
-      .amount, .tokenSymbol {
-        display: inline-flex;
+      .amount,
+      .tokenSymbol {
+        display: inline-flex
       }
 
       &:hover {
-        background-color: transparentize($color: $gray, $amount: 0.9);
+        background-color: transparentize($color: $gray, $amount: 0.9)
       }
 
       .status {
@@ -48,20 +50,20 @@
         text-align: center;
 
         .verified {
-          color: $green;
+          color: $green
         }
 
         .committed {
-          color: #aa935d;
+          color: #aa935d
         }
 
         .inProgress {
           color: $gray;
-          animation: spin 0.5s linear 0s infinite;
+          animation: spin 0.5s linear 0s infinite
         }
 
         .rejected {
-          color: $red;
+          color: $red
         }
       }
 
@@ -72,16 +74,17 @@
           max-width: 200px;
           height: auto;
           white-space: initial;
-          width: max-content;
+          width: max-content
         }
       }
 
       .mainInfo {
         text-align: left;
+
         &.noInfo {
           @media screen and (min-width: $mobile) {
             position: relative;
-            top: 4px;
+            top: 4px
           }
         }
 
@@ -89,7 +92,7 @@
           color: $gray;
           font-size: 12px;
           line-height: 14px;
-          cursor: default;
+          cursor: default
         }
 
         .amount {
@@ -97,7 +100,7 @@
           line-height: 32px;
 
           &.small {
-            font-size: $fontSizeRegular;
+            font-size: $fontSizeRegular
           }
         }
 
@@ -108,42 +111,44 @@
             max-width: 100px;
             overflow: hidden;
             white-space: nowrap;
-            text-overflow: ellipsis;
+            text-overflow: ellipsis
           }
+
           .copyContentHash {
             display: flex;
             align-items: center;
             color: $gray;
             cursor: pointer;
             transition: color $transition1;
+
             &:active {
               transition-duration: 0.0001s;
-              color: $green !important;
+              color: $green !important
             }
-            
+
             .iconContainer {
               display: flex;
               align-items: center;
-              
+
               svg {
                 position: relative;
                 top: -0.5px;
                 height: 15px;
                 width: auto;
                 overflow: visible;
-                margin-right: 4px;
+                margin-right: 4px
               }
+
               span {
-                font-size: 12px;
+                font-size: 12px
               }
             }
           }
         }
 
-
         .tokenSymbol {
           font-size: $tempFontSizeMedium;
-          line-height: 20px;
+          line-height: 20px
         }
       }
 
@@ -163,23 +168,24 @@
             svg.modalOpenIcon {
               top: 1px !important;
               width: 15px;
-              height: 15px;
+              height: 15px
             }
           }
 
           svg {
             margin-left: 5px;
+
             &.modalOpenIcon {
               transition: filter $transition1;
               cursor: pointer;
 
               &:hover {
-                filter: brightness(125%);
+                filter: brightness(125%)
               }
 
               &:active {
                 transition-duration: 0.001s;
-                filter: brightness(90%);
+                filter: brightness(90%)
               }
             }
           }
@@ -196,7 +202,7 @@
 
           @media screen and (max-width: $mobile) {
             margin: 0 auto;
-            text-align: center;
+            text-align: center
           }
         }
 
@@ -205,7 +211,7 @@
           margin-top: 7px;
           font-size: $fontSizeRegular;
           line-height: 1.1;
-          text-align: left !important;
+          text-align: left !important
         }
       }
     }
@@ -220,7 +226,7 @@
       text-align: center;
 
       &.loadMoreAvailable {
-        height: calc(100% - 45px);
+        height: calc(100% - 45px)
       }
     }
   }
@@ -252,11 +258,11 @@
           .tooltip-wrapper {
             height: 100%;
             width: 100%;
-            
+
             svg {
               display: block;
               width: 100%;
-              height: 100%;
+              height: 100%
             }
           }
         }
@@ -273,7 +279,7 @@
             text-align: left !important;
             word-break: break-word;
             line-height: 1rem !important;
-            letter-spacing: -0.02rem;
+            letter-spacing: -0.02rem
           }
 
           .amount {
@@ -281,14 +287,14 @@
             white-space: normal
           }
 
-          .amount, .tokenSymbol {
+          .amount,
+          .tokenSymbol {
             font-size: 12px !important;
-            font-family: $firaCode;
-
+            font-family: $firaCode
           }
 
           .tokenSymbol {
-            margin-left: 0.1rem;
+            margin-left: 0.1rem
           }
 
           //
@@ -296,12 +302,12 @@
             & > div {
               font-size: 10px !important;
               text-align: left;
-              line-height: 1rem;
+              line-height: 1rem
             }
 
             white-space: nowrap;
             flex-grow: 1;
-            width: 100%;
+            width: 100%
           }
         }
 
@@ -316,20 +322,21 @@
             word-break: break-word;
             line-height: 1rem !important;
             letter-spacing: -0.01rem;
-            font-size: 14px;
+            font-size: 14px
           }
 
-          .actionType, .actionType > span {
+          .actionType,
+          .actionType > span {
             text-align: left !important;
             white-space: nowrap;
-            font-size: 10px !important;
+            font-size: 10px !important
           }
 
           .actionValue {
             font-size: 12px !important;
             text-align: left !important;
             margin: 0;
-            white-space: nowrap;
+            white-space: nowrap
           }
 
           .linkText {
@@ -343,7 +350,7 @@
 
             svg {
               width: 12px;
-              height: 12px;
+              height: 12px
             }
           }
         }
@@ -359,7 +366,7 @@
 
           svg {
             top: -2.5px;
-            left: 0;
+            left: 0
           }
         }
       }
@@ -371,14 +378,14 @@ body.inkline {
   &.-light {
     .transactionsPage .transactionsListContainer {
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-light;
+        background-color: $input-border-color-focus-light
       }
 
       .transactionItem {
         border-color: $input-border-color-light;
 
         .copyContentHash:hover {
-          color: $black;
+          color: $black
         }
       }
     }
@@ -387,14 +394,14 @@ body.inkline {
   &.-dark {
     .transactionsPage .transactionsListContainer {
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-dark;
+        background-color: $input-border-color-focus-dark
       }
 
       .transactionItem {
         border-color: $input-border-color-dark;
 
         .copyContentHash:hover {
-          color: $white;
+          color: $white
         }
       }
     }
