--- a/src/assets/style/vars/_transitions.scss
+++ b/src/assets/style/vars/_transitions.scss
@@ -1,37 +1,40 @@
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity.5s ease;
-  will-change: opacity;
+  transition: opacity0.5s ease;
+  will-change: opacity
 }
 
 .fade-enter,
 .fade-leave-to {
-  opacity: 0;
+  opacity: 0
 }
 
 .fadeFast-enter-active,
 .fadeFast-leave-active {
-  transition: 0.2s ease;
+  transition: 0.2s ease
 }
 
 .fadeFast-enter,
 .fadeFast-leave-to {
-  opacity: 0;
+  opacity: 0
 }
 
-
-.slide-vertical-fade-enter-active, .slide-vertical-fade-leave-active {
+.slide-vertical-fade-enter-active,
+.slide-vertical-fade-leave-active {
   transition: 0.2s ease;
   transition-property: transform, opacity;
-  will-change: transform, opacity;
+  will-change: transform, opacity
 }
 
-.slide-vertical-fade-enter, .slide-vertical-fade-leave-to {
-  opacity: 0;
-}
-.slide-vertical-fade-enter {
-  transform: translateY(-15px);
-}
+.slide-vertical-fade-enter,
 .slide-vertical-fade-leave-to {
-  transform: translateY(15px);
+  opacity: 0
+}
+
+.slide-vertical-fade-enter {
+  transform: translateY(-15px)
+}
+
+.slide-vertical-fade-leave-to {
+  transform: translateY(15px)
 }
